--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: MIRA
-subtitle: Đây là website của Doãn Minh
+subtitle: Vì mỗi khoảnh khắc cuộc sống là món quà vô giá
 ---
